--- a/styles/main.css
+++ b/styles/main.css
@@ -25,8 +25,8 @@ Styling the anchor tags of
 the navigation bar */
 
 nav {
-    background-color: #333;
-    color: #fff;
+    background-color:#675054;
+    color: #0c080a;
     padding: 10px;
 }
 
